Blender closes when i click rendered view for eevee and shading tab for both cycles and eevee #67009

Closed
opened 2019-07-15 19:08:08 +02:00 by john kainkwa · 8 comments

System Information
Operating system: Windows-8.1-6.3.9600 64 Bits
Graphics card: Intel(R) HD Graphics 4400 Intel 4.2.0 - Build 10.18.10.3379

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error
from the default cube scene when i enter rendered view with eevee as render engine blender closes also the same happens when i click shading tab with eevee as render engine,also same happens with cycles when i click shading tab or try to change materials for both eevee and cycles

Exact steps for others to reproduce the error
error 1: from the default cube click rendered view or shading tab (eevee render engine) or try to change the material
error 2: from the default cube click shading tab (cycles engine)

**System Information** Operating system: Windows-8.1-6.3.9600 64 Bits Graphics card: Intel(R) HD Graphics 4400 Intel 4.2.0 - Build 10.18.10.3379 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** from the default cube scene when i enter rendered view with eevee as render engine blender closes also the same happens when i click shading tab with eevee as render engine,also same happens with cycles when i click shading tab or try to change materials for both eevee and cycles **Exact steps for others to reproduce the error** error 1: from the default cube click rendered view or shading tab (eevee render engine) or try to change the material error 2: from the default cube click shading tab (cycles engine)
Author

Added subscriber: @johrek

Added subscriber: @johrek

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Brecht Van Lommel self-assigned this 2019-07-15 19:12:14 +02:00

Please install the latest graphics driver from the Intel website, version 10.18.10.3379 (from 2014) is too old:
https://downloadcenter.intel.com/download/28798/Intel-Graphics-Driver-for-Windows-7-8-1-15-36-?product=81497

Please install the latest graphics driver from the Intel website, version 10.18.10.3379 (from 2014) is too old: https://downloadcenter.intel.com/download/28798/Intel-Graphics-Driver-for-Windows-7-8-1-15-36-?product=81497
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

This comment was removed by @Jeroen-Bakker

*This comment was removed by @Jeroen-Bakker*

This issue was referenced by af51988115

This issue was referenced by af51988115d48fc23407d1ab4d4fff5adf8fdbaf

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67009
No description provided.