Fix T67009, T67013: crash with Intel HD Graphics and some older drivers

Add more versions to the workaround list.